<resources>
    <string name="app_name">Rent Books</string>
    <string name="title_activity_main_product">MainActivityProduct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    //add
    <string name="Book">Sách</string>
    <string name="CategoryBook">Thể loại sách</string>
    <string name="cart">Giỏ hàng</string>

    <string name="UserInfo">Thông tin người dùng</string>
    <string name="Logout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>