<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book"
            android:title="@string/Book"
            android:icon="@drawable/book_24"/>

        <item
            android:id="@+id/nav_CategoryBook"
            android:title="@string/CategoryBook"
            android:icon="@drawable/category_24"/>

        <item
            android:id="@+id/nav_cart"
            android:title="@string/cart"
            android:icon="@drawable/cart_24"/>

        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_user"
                    android:title="@string/UserInfo"
                    android:icon="@drawable/baseline_people_24" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/logout_24" />

            </menu>
        </item>

    </group>
</menu>