<?xml version="1.0" encoding="utf-8"?>
<navigation

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/nav_book">

    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.rentbooks.fragment.BooksFragment.BooksFragment"
        android:label="@string/Book"
        tools:layout="@layout/fragment_books" />
    <fragment
        android:id="@+id/nav_CategoryBook"
        android:name="com.example.rentbooks.fragment.CategoryFragment.CategoryFragment"
        android:label="@string/CategoryBook"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.rentbooks.fragment.CartFragment.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.rentbooks.fragment.UserFragment.UserFragment"
        android:label="@string/UserInfo"
        tools:layout="@layout/fragment_user" />
</navigation>